v1.2/de/_sources/hardware_spec.rst.txt
Hardware-Spezifikation

Hinweis: Die folgenden Hardware-Spezifikationen sind als allgemeine
  Richtlinie angegeben. Das Produkt kann hiervon abweichen.

Lieferumfang

Der Lieferumfang eines

rc_visard

 umfasst üblicherweise lediglich den

rc_visard

-Sensor und die Kurzanleitung. Das Handbuch liegt in digitaler Form
vor, ist im Sensor hinterlegt und lässt sich zudem über die

Web GUI

 oder über die Roboception-Homepage

http://www.roboception.com/documentation

 aufrufen.

Hinweis: Folgende Elemente sind, sofern nicht anders angegeben,
  NICHT im Lieferumfang enthalten:

  Kupplungen, Adapter, Halterungen;

  Netzteil, Kabel und Sicherungen;

  Netzwerkkabel.

  In Abschnitt

  Zubehör

   ist angegeben, welche Kabelanbieter Roboception empfiehlt.

Für den

rc_visard

 ist ein Anschlussset verfügbar. Dieses Set umfasst das
M12/RJ45-Netzwerkkabel, ein 24-V-Netzteil und einen DC/M12-Adapter.
Für nähere Informationen siehe

Zubehör

.

Hinweis: Das Anschlussset ist lediglich für die Ersteinrichtung,
  nicht jedoch für die dauerhafte Installation im industriellen Umfeld
  gedacht.

Das folgende Bild zeigt die wichtigsten Bauteile des

rc_visard

, auf die in diesem Handbuch Bezug genommen wird.


Technische Spezifikation

Tab. 1

 enthält die gemeinsame technische Spezifikation für beide

rc_visard

-Varianten.

Gemeinsame technische Spezifikation für beide rc_visard-Modelle
rc_visard 65 / rc_visard 160  Bildauflösung  1280 x 960 Pixel, farbig
oder monochrom  Sichtfeld  Horizontal: 61°, Vertikal: 48°  IR Filter
650 nm  Tiefenbild (Auflösung)  640 x 480 Pixel (High) bei 3 Hz  320 x
240 Pixel (Medium) bei 15 Hz  214 x 160 Pixel (Low) bei 25 Hz
Eigenbewegung  200 Hz, geringe Latenz  GPU/CPU  Nvidia Tegra K1
Stromversorgung  18–30 V  Kühlung  Passiv

Der

rc_visard

 65 und der

rc_visard

 160 unterscheiden sich in ihren Basisabständen, was sich einerseits
auf den Tiefenmessbereich und die Auflösung und andererseits auf die
Größe und das Gewicht des Sensors auswirkt.

Unterschiedliche technische Spezifikation für die rc_visard-Varianten
rc_visard 65  rc_visard 160  Basisabstand  65 mm  160 mm
Tiefenmessbereich  0,2 m bis unendlich  0,5 m bis unendlich
Tiefenauflösung  0,5 mm bei 0,2 m  15 mm bei 1,0 m  1,5 mm bei 0,5 m
6 mm bei 1,0 m  23 mm bei 2,0 m  50 mm bei 3,0 m  Abmessungen (B x H x
L)  135 mm x 75 mm x 96 mm  230 mm x 75 mm x 84 mm  Gewicht  0,68 kg
0,84 kg

Der

rc_visard

 kann für zusätzliche Funktionalitäten mit Onboard-Softwaremodulen,
wie z. B. SLAM, ausgestattet werden. Diese Softwaremodule können
bestellt werden und benötigen ein Lizenz-Update.


CAD-Modelle des

rc_visard

 können von der Roboception-Homepage heruntergeladen werden:

http://www.roboception.com/download

. Die CAD-Modelle werden nach bestem Wissen und Gewissen, aber ohne
Garantie für die Richtigkeit bereitgestellt. Wird als
Materialeigenschaft Aluminium zugewiesen (Dichte:
2.76\mathrm{g\over{cm}^3}), weicht das CAD-Modell in Bezug auf Gewicht
und Massenschwerpunkt nicht mehr als fünf Prozent und in Bezug auf das
Trägheitsmoment nicht mehr als zehn Prozent vom Produkt ab.

Umwelt- und Betriebsbedingungen

Der

rc_visard

 ist für industrielle Anwendungen konzipiert worden. Die in

Tab. 3

 angegebenen Umweltbedingungen für die Lagerung, den Transport und den
Betrieb sind ausnahmslos einzuhalten.

Umweltbedingungen        rc_visard 65 / rc_visard 160
Lager-/Transporttemperatur  -25–70 °C  Betriebstemperatur  0–50 °C
Relative Feuchte (nicht kondensierend)  20–80 %  Schwingungen  5 g
Erschütterungen  50 g  Schutzklasse  IP 54  Sonstiges  Von korrosiven
Flüssigkeiten oder Gasen fernhalten.  Von explosiven Flüssigkeiten
oder Gasen fernhalten.  Von starken elektromagnetischen Störungen
fernhalten.

Der

rc_visard

 ist für den Betrieb bei einer Umgebungstemperatur zwischen 0 und 50
°C ausgelegt und arbeitet mit konvektiver (passiver) Kühlung. Während
der Verwendung muss, insbesondere im Bereich der Kühlrippen, ein
ungehinderter Luftstrom sichergestellt sein. Der

rc_visard

 sollte nur mithilfe der vorgesehenen mechanischen
Montageschnittstelle montiert werden; kein Teil des Gehäuses darf
während des Betriebs abgedeckt werden. Das Gehäuse muss in alle
Richtungen mindestens zehn Zentimeter Abstand zu angrenzenden
Elementen haben und es ist ein ausreichender Luftaustausch mit der
Umgebung nötig, um eine angemessene Kühlung sicherzustellen. Die
Kühlrippen müssen frei von Schmutz und anderen Verunreinigungen
gehalten werden.

Die Gehäusetemperatur richtet sich nach der Verarbeitungslast, der
Sensororientierung und der Umgebungstemperatur. Erreichen die frei
liegenden Gehäuseflächen des Sensors eine Temperatur von mehr als 60
°C, wechselt die LED von Grün auf Rot.

Achtung: Für handgeführte Anwendungen sollte ein wärmeisolierter
  Griff am Sensor angebracht werden. So wird das bei Kontakt mit der
  60 °C heißen Oberfläche bestehende Risiko für Brandverletzungen
  reduziert.

Spezifikationen für die Stromversorgung

Der

rc_visard

 muss an eine Gleichspannungsquelle angeschlossen werden. Der
Lieferumfang des

rc_visard

 umfasst standardmäßig kein Netzteil. Das im Anschlussset enthaltene
Netzteil kann für die Ersteinrichtung verwendet werden. Der Kunde ist
dafür verantwortlich, bei einer dauerhaften Installation für eine
geeignete Gleichspannungsquelle zu sorgen. Der Sensor entspricht den
Anforderungen an industrielle Ausrüstung der Klasse A im Sinne der EN
55011. Daher muss jeder

rc_visard

 an eine eigene Stromquelle angeschlossen werden. Der Anschluss an ein
Gebäudenetz darf nur über ein Netzteil erfolgen, das gemäß EN55011
Klasse B zertifiziert ist.

Grenzwerte für die Stromversorgung            Minimum  Bemessungswert
Maximum  Versorgungsspannung  18 V  24 V  30 V  Max. Leistungsaufnahme
25 W  Überstromschutz  Schutz der Stromversorgung mit einer
2-A-Sicherung  Erfüllung der EMV-Anforderungen  Industrielles Gerät
gemäß EN 55011 Klasse A

Achtung: Die Überschreitung der maximalen Bemessungswerte kann zu
  Schäden am

  rc_visard

  , am Netzteil und an angeschlossener Ausrüstung führen.

Achtung: Jeder

  rc_visard

   muss von einem eigenen Netzabteil versorgt werden.

Achtung: Der Anschluss an das Gebäudenetz darf nur über Netzteile
  erfolgen, die gemäß EN 55011 als Gerät der Klasse B zertifiziert
  sind.

Verkabelung

Die Kabel sind nicht im Standardlieferumfang des

rc_visard

 enthalten. Es obliegt dem Kunden, geeignete Kabel zu beschaffen. In

Zubehör

 ist eine Übersicht über die empfohlenen Komponenten enthalten.

Achtung: Die Richtlinien zum Kabelmanagement sind zwingend
  einzuhalten. Kabel sind immer mit einer Zugentlastung am Gestell des

  rc_visard

   zu befestigen, sodass durch Kabelbewegungen keine Kräfte auf die
  M12-Anschlüsse des

  rc_visard

   wirken. Die verwendeten Kabel müssen lang genug sein, damit sich
  der

  rc_visard

   voll bewegen kann, ohne dass das Kabel zu stark belastet wird. Der
  minimale Biegeradius des Kabels muss beachtet werden.

Der

rc_visard

 besitzt eine industrielle, achtpolige M12-Buchse (A-kodiert) für die
Ethernet-Verbindung und einen achtpoligen M12-Stecker (A-kodiert) für
den Stromanschluss und die GPIO-Konnektivität. Beide Anschlüsse
befinden sich an der Rückwand des Geräts. Ihre Position (Abstand von
Mittellinien) ist beim

rc_visard

 65 und beim

rc_visard

 160 identisch. Die Lage der beiden Anschlüsse wird am Beispiel des

rc_visard

 65 in

Abb. 5

 dargestellt.


Die Anschlüsse sind so gedreht, dass die üblicherweise 90°
abgewinkelten Stecker horizontal abgehen und von der Kamera (und den
Kühlrippen) wegzeigen.


Die Steckerbelegung für den Ethernetanschluss ist in

Abb. 7

 angegeben.


Die Steckerbelegung für den Stromanschluss ist in

Tab. 5

 angegeben.

Steckerbelegung für den Stromanschluss      Pos.  Belegung  1  GPIO
Eingang 2  2  Stromzufuhr  3  GPIO Eingang 1  4  GPIO Masse  5  GPIO
Vcc  6  GPIO Ausgang 1 (Bildbelichtung)  7  Masse  8  GPIO Ausgang 2

Die GPIO-Signale werden über Optokoppler entkoppelt.

GPIO Eingang 1

 und

2

 sowie

GPIO Ausgang 2

 sind für künftige Funktionen vorbehalten und haben derzeit keine für
Benutzer zugänglichen Funktionen. Diese Pins sollten ungeerdet
bleiben.

Achtung: Es ist besonders wichtig, dass

  GPIO Eingang 1

   während des Boot-Vorgangs ungeerdet oder auf LOW gesetzt ist. Der

  rc_visard

   fährt nicht hoch, wenn der Pin während des Boot-Vorgangs auf HIGH
  gesetzt ist.

GPIO Ausgang 1

 bietet standardmäßig ein Signal zur Belichtungssynchronisierung und
hat für die Dauer der Belichtung einen logischen HIGH-Pegel.

Das GPIO-Schaltschema und die zugehörigen Spezifikationen sind in

Abb. 8

 angegeben. Die maximale Spannung für

GPIO Eingang

 und

GPIO Vcc

 beträgt 30 V.


Achtung: Schließen Sie keine Signale mit Spannungen über 30 V an den

  rc_visard

   an.

Mechanische Schnittstelle

Der

rc_visard

 65 und der

rc_visard

 160 verfügen an der Unterseite über eine identische
Montageschnittstelle.


Zur Fehlerbehebung sowie zu Konfigurationszwecken kann der Sensor über
die am Koordinatenursprung angegebene, genormte Stativaufnahme
(Gewinde: 1/4 Zoll x 20) montiert werden. Für dynamische Anwendungen,
wie für die Montage an einem Roboterarm, muss der Sensor mit drei
M4-8.8-Maschinenschrauben befestigt werden, die mit einem Drehmoment
von 2,5 Nm anzuziehen und mit einer mittelfesten Gewindesicherung, wie
Loctite 243, zu sichern sind. Die maximale Einschraubtiefe beträgt 6
mm. Die beiden Löcher mit einem Durchmesser von 4 mm können für
Positionsstifte (ISO 2338 4 m6) verwendet werden, damit der Sensor
präzise positioniert wird.

Achtung: Für dynamische Anwendungen muss der

  rc_visard

   mit drei M4-8.8-Maschinenschrauben befestigt werden, die mit einem
  Drehmoment von 2,5 Nm anzuziehen und mit einer mittelfesten
  Gewindesicherung zu sichern sind. Es dürfen keine hochfesten
  Schrauben verwendet werden. Die  Einschraubtiefe muss wenigstens 5
  mm betragen.

Koordinatensysteme

Der Ursprung des

rc_visard

-Koordinatensystems liegt in der Austrittspupille der linken
Kameralinse. Dieses System wird auch als Sensor- oder
Kamerakoordinatensystem bezeichnet. Die ungefähre Lage für den

rc_visard

 65 wird auf dem nächsten Bild gezeigt.

Das Montagepunkt-Koordinatensystem für beide

rc_visard

-Geräte sitzt an der Unterseite, zentriert auf dem Gewinde, wobei die
Ausrichtung der des Sensor-Koordinatensystems entspricht.

Abb. 10

 zeigt den ungefähren Versatz.


Die ungefähre Position des Sensor-/Kamerakoordinatensystems und des
Montagepunkt-Koordinatensystems für den

rc_visard

 160 ist in

Abb. 11

 angegeben.


Hinweis: Der korrekte Versatz zwischen dem
  Sensor-/Kamerakoordinatensystem und einem Roboterkoordinatensystem
  kann über die

  Hand-Auge Kalibrierung

   bestimmt werden.
